# ChangeLog for dev-perl/perl-ldap
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/perl-ldap/ChangeLog,v 1.10 2003/09/08 12:23:08 mcummings Exp $

  08 Sep 2003; Michael Cummings <mcummings@gentoo.org>
  perl-ldap-0.25-r1.ebuild, perl-ldap-0.25-r2.ebuild:
  typo on my part - again, Tero saves the day

*perl-ldap-0.29 (08 Sep 2003)

  08 Sep 2003; Michael Cummings <mcummings@gentoo.org> perl-ldap-0.29.ebuild:
  Next version

*perl-ldap-0.25-r2 (08 Sep 2003)

  08 Sep 2003; Michael Cummings <mcummings@gentoo.org>
  perl-ldap-0.25-r1.ebuild, perl-ldap-0.25-r2.ebuild:
  Bug 27568; version bumped for extra functionality; thanks Tero Pelander
  <tpeland@tkukoulu.fi>

  07 Jun 2003; <rac@gentoo.org> perl-ldap-0.25-r1.ebuild:
  Add IUSE

*perl-ldap-0.25-r1 (27 Mar 2003)

  27 Mar 2003; <rac@gentoo.org> perl-ldap-0.25-r1.ebuild:
  add dependency on dev-perl/Convert-ASN1, thanks to Hamilton Coutinho
  <hamiltonc@via-rs.net>, fixes bug #18227

  29 Oct 2002; Seemant Kulleen <seemant@gentoo.org> ChangeLog  :
  forced version bump to install into correct locations

*perl-ldap-0.25 (22 Sep 2002)

  22 Sep 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :

  new package