@@ -1,16 +1,16 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/perl-ldap/Attic/perl-ldap-0.29.ebuild,v 1.2 2003/09/08 15:49:52 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/perl-ldap/Attic/perl-ldap-0.29.ebuild,v 1.3 2003/12/14 03:41:29 pylon Exp $
 
 inherit perl-module
 
 DESCRIPTION="A collection of perl modules which provide an object-oriented interface to LDAP servers."
 SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 HOMEPAGE="http://perl-ldap.sourceforge.net"
-IUSE=""
+IUSE="sasl xml ssl"
 SLOT="0"
 LICENSE="Artistic"
-KEYWORDS="~x86 ~amd64 ~alpha ~sparc ~ppc"
+KEYWORDS="~x86 ~amd64 ~alpha ~sparc ppc"
 
 DEPEND="${DEPEND} dev-perl/Convert-ASN1
 		dev-perl/URI
