@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/perl-ldap
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/perl-ldap/ChangeLog,v 1.10 2003/09/08 12:23:08 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/perl-ldap/ChangeLog,v 1.11 2003/12/14 03:41:29 pylon Exp $
+
+  14 Dec 2003; Lars Weiler <pylon@gentoo.org> perl-ldap-0.29.ebuild:
+  Make stable on ppc
+  Fixed IUSE
 
   08 Sep 2003; Michael Cummings <mcummings@gentoo.org>
   perl-ldap-0.25-r1.ebuild, perl-ldap-0.25-r2.ebuild:
